# trelfred

./: .gitignore  README.md  stack.yaml  trelfred.cabal
app/: Main.hs
src/: Cache.hs  Search.hs
src/Alfred/: Cache.hs  Increment.hs  Item.hs  Search.hs
src/Trelfred/: Board.hs  Cache.hs  Increment.hs  Request.hs  Search.hs
