name:                trelfred
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jsteiner/trelfred#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Steiner
maintainer:          josh@jsteiner.me
copyright:           2016 Josh Steiner
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cache
                     , Search
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , xmlgen
                     , aeson
                     , load-env
                     , bytestring
                     , text
                     , lens
  default-language:    Haskell2010
  extensions:          OverloadedStrings

executable trelfred
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , trelfred
  default-language:    Haskell2010

test-suite trelfred-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , trelfred
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsteiner/trelfred
