name:                trelfred
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jsteiner/trelfred#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Steiner
maintainer:          josh@jsteiner.me
copyright:           2016 Josh Steiner
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Trelfred.Request
                     , Trelfred.Board
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , text
                     , lens
                     , bytestring
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:   -Wall -Werror -fwarn-tabs -O2

executable trelfred-cache
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , trelfred
  default-language:    Haskell2010
  ghc-options:   -Wall -Werror -fwarn-tabs -O2

source-repository head
  type:     git
  location: https://github.com/jsteiner/trelfred
